feat(tests): refactor course-related tests to use Collections.singletonList for enrolled users